Rename Clue class to ClueList